fixed layout issue with incomplete setup activities on incomplete activities page

--- a/app/assets/stylesheets/incomplete_activities.css.scss
+++ b/app/assets/stylesheets/incomplete_activities.css.scss
@@ -4,6 +4,7 @@
 
 .activity-week {
   margin-top: 26px;
+  padding-left: 0px;
 }
 
 .incomplete-activity-submit-button {
